--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
     </head>
     <style>
         #test {
-            font-size: 4
-            em;
+            font-size: 4em;
             color: black;
         }
     </style>
     <body>
-        <div id="test">This is desktop update 1.0</div>
+        <div id="test">This is desktop update 2.0</div>
     </body>
     
     <script>
